# example-10-releases-python-cbhatton

./: LICENCE  README.md  setup.cfg
src/guesinggame.egg-info/: PKG-INFO  SOURCES.txt
test/: __init__.py
