[metadata]
name = guesinggame
version = 0.0.1
author = Cody Hatton
author_email = cbhatton@ksu.edu
description = Guessing Game
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ksu-cc-410-fall2021/example-10-releases-python-cbhatton
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include-package-data = True

[options.packages.find]
where = src

[options.package_data]
guesinggame = py.typed